# tipsy

./: README  run99.ascii
code/: ChangeLog  Makefile.in  absorb.c  acc_load.c  activatebox.c  add_const_mult_vec.c  add_vec.c  all_color.c  alloca.c  angleup.c  arguments.c  array_color.c  arraymoments.c  arraystat.c  ascii2binary.c  axesscale.c  bar_resize_proc.c  boxstat_sub.c  calc_uv.c  canvas_resize_proc.c  catbox.c  cconst_sub.c  change_color.c  clear_rot.c  clearall.c  clearrot.c  closeascii.c  closebinary.c  closemanifest.c  colorbar_label.c  comm.h  command_interp.c  commands.c  configure  configure.in  cool_func.c  cooling_sub.c  cross_product.c  cube.c  defs.h  (+200 more)
code/readline/: Makefile.in  acconfig.h  bind.c  chardefs.h  complete.c  config.h.in  configure  configure.in  display.c  funmap.c  history.c  isearch.c  keymaps.c  parens.c  readline.c  readline.h  rldefs.h  rltty.c  search.c  signals.c  tilde.c  vi_mode.c  xmalloc.c
man/: .tipsy_history  makehtml.sh  whatis  whatis.dir  whatis.pag  whatishtml.awk
man/cat1/: activatebox.1  arguments.1  arraystat.1  aup.1  axesscale.1  boxstat.1  catbox.1  cconst.1  clearall.1  closeascii.1  closebinary.1  colorlabel.1  commands.1  crot.1  deletewin.1  dmac.1  drift.1  epsgas.1  fconst.1  framepoints.1  gravsoft.1  hard.1  help.1  hubble.1  label.1  loadall.1  loadb.1  loadbinary.1  lumconstants.1  macro.1  makebox.1  markarray.1  markbox.1  markgal.1  markmass.1  markstat.1  mmac.1  moments.1  oldreada.1  openascii.1  (+86 more)
man/man1/: .tipsy_history  abox.1  absorb.1  activatebox.1  angleup.1  arg.1  arguments.1  arraymoments.1  arraystat.1  ascale.1  aup.1  axesscale.1  boxstat.1  catbox.1  cconst.1  clearall.1  clearrot.1  closeascii.1  closebinary.1  closemanifest.1  colorbarlabel.1  colorlabel.1  com.1  commands.1  coolconstants.1  crot.1  delete.1  deletemacro.1  deletewin.1  dmac.1  drift.1  eps.1  epsgas.1  expose.1  fconst.1  formconstants.1  framepoints.1  frp.1  gasify.1  gravsoft.1  (+156 more)
